# mini-lang

./: Cargo.toml  README.md  tarai.mini
benches/: tarai.rs
src/: ast.rs  error.rs  eval.rs  ir.rs  lazy_eval.rs  lib.rs  main.rs  parser.rs  printer.rs  utils.rs
src/eval/: eager.rs  lazy.rs  mod.rs  namespace.rs  operation.rs
