[package]
name = "mini-lang"
version = "0.1.0"
description = "A minimal, experimental language for lazy evaluation."
authors = ["watcol <potfman@gmail.com>"]
repository = "https://github.com/watcol/mini-lang"
license = "MIT"
readme = "README.md"
edition = "2018"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs",
]

[features]
default = []
bin = ["structopt"]

[dependencies]
structopt = { version = "0.3", optional = true }
anyhow = "1.0"
peg = "0.7"

[[bin]]
name = "mini"
path = "src/main.rs"
required-features = ["bin"]
