[package]
name = "mini-lang"
version = "0.1.2"
description = "A minimal, experimental language for lazy evaluation."
authors = ["watcol <potfman@gmail.com>"]
repository = "https://github.com/watcol/mini-lang"
keywords = ["language", "experimental", "interpreter"]
categories = ["compilers"]
license = "MIT"
readme = "README.md"
edition = "2018"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs",
]

[dev-dependencies]
criterion = "0.3"
indoc = "1.0"

[[bench]]
name = "tarai"
harness = false

[features]
default = []
bin = ["structopt"]

[dependencies]
thiserror = "1.0"
structopt = { version = "0.3", optional = true }
peg = "0.7"

[[bin]]
name = "mini"
path = "src/main.rs"
required-features = ["bin"]
